scripts/seo/__tests__/fixtures/r-seo-09/positive/03-jsx-restructure/base.tsx
import type { MetaFunction } from "@remix-run/node";

export const meta: MetaFunction = () => [{ title: "Page" }];

export default function Page() {
  return (
    <div>
      <h1>Title</h1>
      <p>Paragraph</p>
      <p>Another</p>
    </div>
  );
}
