scripts/seo/__tests__/fixtures/r-seo-09/negative/03-default-export-rename/base.tsx
export default function OldName() {
  return <div />;
}
